enhance: New dashboard and improve student records speed

--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -37,7 +37,7 @@
                 <li class="app-sidebar__heading" style="color: red;">DEVELOPMENT MODE</li>
                 {% endif %}
                 
-                {% if current_user.role.name in ["Admin"] %}
+                {% if current_user.role.name in ["Admin", "Secretary", "Partner"] %}
                     <li id="header_dashboard" class="app-sidebar__heading">Dashboard</li>
                     <li>
                         <a id="li_dashboard" href="{{url_for('lms.dashboard')}}" class="">
