fix: d6561f741d824c2195fb851a915fa23f

--- a/prime_admin/templates/lms/student_info_pdf.html
+++ b/prime_admin/templates/lms/student_info_pdf.html
@@ -97,7 +97,7 @@
 				</tr>
 				<tr class="item">
 					<td>Date of Birth:</td>
-					<td colspan="2">{{student.birth_date}}</td>
+					<td colspan="2">{{student.get_birth_date()}}</td>
 				</tr>
 				<tr class="item">
 					<td>Address:</td>
