feat: 3bc5bc63be4041e5833ac3e1616f16c4

--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -178,6 +178,19 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-md-3 mb-3">
+                                    <div class="position-relative form-group">
+                                        <label class="">Reviewer</label>
+                                        <div>
+                                            <div class="custom-checkbox custom-control"><input onclick="return false;" type="checkbox" id="reading" name="reviewers" value="reading" class="custom-control-input"><label class="custom-control-label" for="reading">
+                                                Reading
+                                            </label></div>
+                                            <div class="custom-checkbox custom-control"><input onclick="return false;" type="checkbox" id="listening" name="reviewers" value="listening" class="custom-control-input"><label class="custom-control-label" for="listening">
+                                                Listening
+                                            </label></div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-md-2 mb-3">
                                     <div class="position-relative form-group">
                                         <label for="others" class="">Others</label>
